--- a/index.html
+++ b/index.html
@@ -124,7 +124,66 @@
       </div><!-- slider container -->
     </div><!-- budget-slider -->
 
-
+    <div class="budget-content">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="col-md-4">
+              <ul class="list-group">
+                <h2 class="list-group-item">Types of Steel</h2>
+                <li class="list-group-item"><a href="#">Steel 1</a> <span class="badge">12</span></li>
+                <li class="list-group-item"><a href="#">Steel 2</a></li>
+                <li class="list-group-item"><a href="#">Steel 3</a></li>
+                <li class="list-group-item"><a href="#">Steel 4</a></li>
+              </ul>
+            </div>
+            <div class="col-md-8">
+              <h2>Pics of Inventory</h2>
+              <div class="col-md-3">
+                <img src="img/01.jpeg" alt="" class="img-responsive">
+                <div class="text-center"><a href="#">Item 1</a></div>
+                <p class="text-center">$100.00</p>
+              </div>
+              <div class="col-md-3">
+                <img src="img/02.jpeg" alt="" class="img-responsive">
+                <div class="text-center"><a href="#">Item 1</a></div>
+                <p class="text-center">$100.00</p>
+              </div>
+              <div class="col-md-3">
+                <img src="img/03.jpeg" alt="" class="img-responsive">
+                <div class="text-center"><a href="#">Item 1</a></div>
+                <p class="text-center">$100.00</p>
+              </div>
+              <div class="col-md-3">
+                <img src="img/04.jpeg" alt="" class="img-responsive">
+                <div class="text-center"><a href="#">Item 1</a></div>
+                <p class="text-center">$100.00</p>
+              </div>
+              <div class="col-md-3">
+                  <img src="img/01.jpeg" alt="" class="img-responsive">
+                  <div class="text-center"><a href="#">Item 1</a></div>
+                  <p class="text-center">$100.00</p>
+                </div>
+                <div class="col-md-3">
+                  <img src="img/02.jpeg" alt="" class="img-responsive">
+                  <div class="text-center"><a href="#">Item 1</a></div>
+                  <p class="text-center">$100.00</p>
+                </div>
+                <div class="col-md-3">
+                  <img src="img/03.jpeg" alt="" class="img-responsive">
+                  <div class="text-center"><a href="#">Item 1</a></div>
+                  <p class="text-center">$100.00</p>
+                </div>
+                <div class="col-md-3">
+                  <img src="img/04.jpeg" alt="" class="img-responsive">
+                  <div class="text-center"><a href="#">Item 1</a></div>
+                  <p class="text-center">$100.00</p>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- budget-content -->
 
 
     
